# tldr

./: Cargo.toml  LICENSE  Makefile  README.md
data/: tldr.service  tldrs.service
src/: clear.rs  cli.rs  dir.rs  get_tef.rs  list.rs  main.rs  msg.rs  serve.rs  utils.rs
