[package]
name = "tldrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive"] }
ctrlc = { version = "3.4.5", features = ["termination"] }
daemonize = "0.5.0"
env_logger = "0.11.5"
fs-tail = "0.1.4"
log = "0.4.22"
xdg = "2.5.2"
